src/objects/caesars_gst_id_xref__x.object
<CustomObject>
    <description>caesars$gst_id_xref</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_id_xref</externalName>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_xref_type__c</fullName>
        <description>c_xref_type</description>
        <externalDeveloperName>c_xref_type</externalDeveloperName>
        <label>c_xref_type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_xref_dmid__c</fullName>
        <description>i_xref_dmid</description>
        <externalDeveloperName>i_xref_dmid</externalDeveloperName>
        <label>i_xref_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$gst_id_xref</label>
    <pluralLabel>caesars$gst_id_xref</pluralLabel>
</CustomObject>